--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
+      <div class="accordion" id="accordion">
+
+        <div class="item">
+          <div class="item__header">Что делать при гарантийном случае?</div>
+          <div class="item__content">При наступлении гарантийного случая вам следует обратиться в наш сервисный центр любым удобным для вас способом. Мы несем полную ответственность за качество работы наших мастеров, поэтому произведем гарантийный ремонт совершенно бесплатно.</div>
+        </div>
+        <div class="item">
+          <div class="item__header">Действительно ли проведут те работы, о которых меня предупреждают, заменят детали на новые и другие детали не тронут?</div>
+          <div class="item__content ">Мы работаем абсолютно прозрачно. По окончании ремонта вам будет выдан документ, подтверждающий выполнение всех работ, причем каждый пункт будет прописан отдельной строкой. На все установленные детали мы предоставляем чеки.</div>
+        </div>
+        <div class="item">
+          <div class="item__header">Диагностика бесплатная или мне придется за что-то платить?</div>
+          <div class="item__content">При последующем ремонте диагностика в нашем сервисном центре всегда проводится бесплатно.</div>
+        </div>
+        <div class="item">
+          <div class="item__header">Все детали и комплектующие у вас в наличии или мне придется ждать несколько недель, как в официальных сервисах?</div>
+          <div class="item__content">Мы делаем все возможное, чтобы самые ходовые запчасти всегда были в наличии на нашем складе, поэтому выполняем ремонт в предельно сжатые сроки.</div>
+        </div>
+        <div class="item">
+          <div class="item__header">Сколько времени требуется на ремонт?</div>
+          <div class="item__content">Срок проведения ремонта зависит от степени сложности поломки. Высокая квалификация наших мастеров позволяет устранить многие неисправности непосредственно в день обращения, однако на проведение сложного ремонта может потребоваться несколько дней.</div>
+        </div>
+        
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
